# knowledgepilot-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
app/: main.py
app/api/v1/: chat.py  health.py  rag.py
app/core/: config.py  prompts.py
app/schemas/: chat.py  rag.py
app/services/: llm_service.py  rag_service.py
docs/: benefits.md  conduct.md  equipment.md  expenses.md  onboarding.md  pricing.md  remote_work.md  security.md  support_sla.md  vacation_policy.md
scripts/: ingest.py
streamlit_app/: app.py
tests/: test_chat_schema.py  test_health.py  test_rag_schema.py
